# ezipc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.kr.md
doc/img/: project-diagram.drawio
include/ezipc/: ezipc.hpp
include/ezipc/class/: log.hpp
include/ezipc/core/: interfaces.hxx  ipc_client.hpp  ipc_ptr.hpp  ipc_server.hpp  types.hpp
include/ezipc/core/impl/: __ipc_client.hpp
include/ezipc/specs/: tcp_client.hpp
include/ezipc/utility/: log.hpp
src/: empty.cpp
src/class/: log.cpp
tests/: main.cpp  test-main.cpp
